add multimodal siamese baseline

--- a/baselines/IKEA_Build_Training_Set.ipynb
+++ b/baselines/IKEA_Build_Training_Set.ipynb
@@ -1,140 +1,148 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "IKEA-Build-Training-Set.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "CXBp90kwuwcq"
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "import numpy as np"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CXBp90kwuwcq"
-      },
-      "source": [
-        "import pickle\n",
-        "import os\n",
-        "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mBAXXmlKu560"
-      },
-      "source": [
-        "def read_pickle(fn):\n",
-        "\t'''\n",
-        "\t# Functionality\n",
-        "\t\tSave the data into pickle format\n",
-        "\t# Arguments\n",
-        "\t\tfn: the pickle file name\n",
-        "\t# Returns\n",
-        "\t\tobj: the desired data object\n",
-        "\t'''\n",
-        "\twith open(fn, \"rb\") as f:\n",
-        "\t\treturn pickle.load(f)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uOd0GObZvDU_"
-      },
-      "source": [
-        "ROOT_DIR =  \"drive/MyDrive/DecorAssist/\"\n",
-        "DATASET_DIR = ROOT_DIR + \"IKEA/text_data/\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eqX7-bhNu8Ov"
-      },
-      "source": [
-        "# {room image url -> string of room category}; e.g.: 'ikea-town-and-country__1364308377063-s4.jpg': 'Living Room'\n",
-        "room_categories = read_pickle(DATASET_DIR + \"categories_dict.p\")\n",
-        "# {item image ID -> string of item category}; e.g.: '291.292.29': 'Footstool',\n",
-        "item_categories = read_pickle(DATASET_DIR + \"categories_images_dict.p\")\n",
-        "# {item image id -> dict of descriptions}; e.g. '202.049.06': {'color': 'Grey,black','desc': 'View more product information Concealed press studs keep the quilt in place','img': 'images/objects/202.049.06.jpg','name': 'GURLI','size': '120x180 cm','type': 'Throw'},\n",
-        "item_property = read_pickle(DATASET_DIR + \"products_dict.p\")\n",
-        "# {item image url -> {description, name}}; e.g: '/static/images/902.592.50.jpg': {'desc': 'The high pile dampens sound and provides a soft surface to walk on.','name': 'GSER'},\n",
-        "item_to_description = read_pickle(DATASET_DIR + \"img_to_desc.p\")\n",
-        "# {item image url -> list of corresponding room image url}; e.g.: 'images/001.509.85.jpg': ['images/room_scenes/ikea-wake-up-and-grow__1364335362013-s4.jpg','images/room_scenes/ikea-wake-up-and-grow-1364335370196.jpg'],\n",
-        "item_to_rooms_map = read_pickle(DATASET_DIR + \"item_to_room.p\")\n",
-        "# {room image url -> list of items}; e.g.: 'ikea-work-from-home-in-perfect-harmony__1364319311386-s4.jpg': ['desk','chair']\n",
-        "room_to_item_categories = read_pickle(DATASET_DIR + \"room_to_items.p\")\n",
-        "\n",
-        "# Some simple preprossing\n",
-        "item_to_info = {key : value[\"type\"] + \" \" +\n",
-        "                             value[\"desc\"]\n",
-        "                       for key, value in item_property.items()}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EZYpp4f8u_OV"
-      },
-      "source": [
-        "room_to_items = {}\n",
-        "\n",
-        "for item_url, room_url_list in item_to_rooms_map.items():\n",
-        "  item_id = item_url.split(\"/\")[-1].split(\".jpg\")[0]\n",
-        "\n",
-        "  for room_url in room_url_list:\n",
-        "    room_id = room_url.split(\"/\")[-1].split(\".jpg\")[0]\n",
-        "    if room_id not in room_to_items:\n",
-        "      room_to_items[room_id] = []\n",
-        "    else:\n",
-        "      room_to_items[room_id].append(item_id)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EofyvY6bxsc2"
-      },
-      "source": [
-        "all_positive_pairs = []\n",
-        "for room, item_id_list in room_to_items.items():\n",
-        "  pairs_for_current_room = list(itertools.combinations(room_to_items[room], 2))\n",
-        "  all_positive_pairs += pairs_for_current_room\n",
-        "  "
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IvXp0GxhD5kV"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "mBAXXmlKu560"
+   },
+   "outputs": [],
+   "source": [
+    "def read_pickle(fn):\n",
+    "\t'''\n",
+    "\t# Functionality\n",
+    "\t\tSave the data into pickle format\n",
+    "\t# Arguments\n",
+    "\t\tfn: the pickle file name\n",
+    "\t# Returns\n",
+    "\t\tobj: the desired data object\n",
+    "\t'''\n",
+    "\twith open(fn, \"rb\") as f:\n",
+    "\t\treturn pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "uOd0GObZvDU_"
+   },
+   "outputs": [],
+   "source": [
+    "ROOT_DIR =  \"drive/MyDrive/DecorAssist/\"\n",
+    "DATASET_DIR = ROOT_DIR + \"IKEA/text_data/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "eqX7-bhNu8Ov"
+   },
+   "outputs": [],
+   "source": [
+    "# {room image url -> string of room category}; e.g.: 'ikea-town-and-country__1364308377063-s4.jpg': 'Living Room'\n",
+    "room_categories = read_pickle(DATASET_DIR + \"categories_dict.p\")\n",
+    "# {item image ID -> string of item category}; e.g.: '291.292.29': 'Footstool',\n",
+    "item_categories = read_pickle(DATASET_DIR + \"categories_images_dict.p\")\n",
+    "# {item image id -> dict of descriptions}; e.g. '202.049.06': {'color': 'Grey,black','desc': 'View more product information Concealed press studs keep the quilt in place','img': 'images/objects/202.049.06.jpg','name': 'GURLI','size': '120x180 cm','type': 'Throw'},\n",
+    "item_property = read_pickle(DATASET_DIR + \"products_dict.p\")\n",
+    "# {item image url -> {description, name}}; e.g: '/static/images/902.592.50.jpg': {'desc': 'The high pile dampens sound and provides a soft surface to walk on.','name': 'GSER'},\n",
+    "item_to_description = read_pickle(DATASET_DIR + \"img_to_desc.p\")\n",
+    "# {item image url -> list of corresponding room image url}; e.g.: 'images/001.509.85.jpg': ['images/room_scenes/ikea-wake-up-and-grow__1364335362013-s4.jpg','images/room_scenes/ikea-wake-up-and-grow-1364335370196.jpg'],\n",
+    "item_to_rooms_map = read_pickle(DATASET_DIR + \"item_to_room.p\")\n",
+    "# {room image url -> list of items}; e.g.: 'ikea-work-from-home-in-perfect-harmony__1364319311386-s4.jpg': ['desk','chair']\n",
+    "room_to_item_categories = read_pickle(DATASET_DIR + \"room_to_items.p\")\n",
+    "\n",
+    "# Some simple preprossing\n",
+    "item_to_info = {key : value[\"type\"] + \" \" +\n",
+    "                             value[\"desc\"]\n",
+    "                       for key, value in item_property.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "EZYpp4f8u_OV"
+   },
+   "outputs": [],
+   "source": [
+    "room_to_items = {}\n",
+    "\n",
+    "for item_url, room_url_list in item_to_rooms_map.items():\n",
+    "  item_id = item_url.split(\"/\")[-1].split(\".jpg\")[0]\n",
+    "\n",
+    "  for room_url in room_url_list:\n",
+    "    room_id = room_url.split(\"/\")[-1].split(\".jpg\")[0]\n",
+    "    if room_id not in room_to_items:\n",
+    "      room_to_items[room_id] = []\n",
+    "    else:\n",
+    "      room_to_items[room_id].append(item_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "EofyvY6bxsc2"
+   },
+   "outputs": [],
+   "source": [
+    "all_positive_pairs = []\n",
+    "for room, item_id_list in room_to_items.items():\n",
+    "  pairs_for_current_room = list(itertools.combinations(room_to_items[room], 2))\n",
+    "  all_positive_pairs += pairs_for_current_room\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "IvXp0GxhD5kV"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "IKEA-Build-Training-Set.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
