refactor pytorch model and reduce redundant code

--- a/baselines/cnn_lstm_baseline.ipynb
+++ b/baselines/cnn_lstm_baseline.ipynb
@@ -85,12 +85,15 @@
         "NUM_WORDS_TOKENIZER = 50000\n",
         "EMBEDDING_DIM = 300\n",
         "BATCH_SIZE = 16\n",
-        "POSITIVE_SIZE = 2000 # We might only use a subset of the positive pairs\n",
+        "POSITIVE_SIZE = 3000 # We might only use a subset of the positive pairs\n",
+        "TRAIN_TEST_RATIO = 0.33\n",
         "\n",
         "# Model Hyperparameters\n",
-        "LEARNING_RATE = 0.001\n",
-        "HIDDEN_DIM = 64\n",
-        "N_LAYERS = 2"
+        "LEARNING_RATE = 2e-4 # 0.001\n",
+        "HIDDEN_DIM = 128 # 64\n",
+        "N_LAYERS = 4 # 2\n",
+        "EPOCHS = 10\n",
+        "CLIP = 5"
       ],
       "execution_count": 3,
       "outputs": []
@@ -235,7 +238,7 @@
         "all_pairs = all_positive_pairs + random_negative_sampling(all_positive_pairs)\n",
         "y = np.array([np.array([1, 0]) for _ in range(len(all_positive_pairs))] + \n",
         "             [np.array([0, 1]) for _ in range(len(all_positive_pairs))])\n",
-        "train_pairs, val_paris, y_train, y_val = train_test_split(all_pairs, y, test_size=0.5, random_state=517)"
+        "train_pairs, val_paris, y_train, y_val = train_test_split(all_pairs, y, test_size=TRAIN_TEST_RATIO, random_state=517)"
       ],
       "execution_count": 6,
       "outputs": []
@@ -288,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lO1ZkgcUK1m7",
-        "outputId": "805c3c88-aec9-4a10-a45b-194aab550de0"
+        "outputId": "3c0dbdea-fd1b-40e8-ac10-fbe52f638c0e"
       },
       "source": [
         "train_premise_texts = [item_to_info[id] for id in train_image_premise_id_list]\n",
@@ -312,10 +315,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 667 unique tokens.\n",
+            "Found 863 unique tokens.\n",
             "Max len: 100\n",
             "Loaded 3000000 word vectors.\n",
-            "total embedded: 632 common words\n"
+            "total embedded: 823 common words\n"
           ]
         }
       ]
@@ -346,7 +349,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18f7d431-79ef-4082-ac59-9f970e76f7a8"
+        "outputId": "41b862a7-8e30-48ca-9d1e-4c61ca95bf2d"
       },
       "source": [
         "img_train_data = TensorDataset(torch.from_numpy(X_train_image_premise), torch.from_numpy(X_train_image_hypothesis), torch.from_numpy(y_train))\n",
@@ -370,8 +373,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "125 125\n",
-            "125 125\n"
+            "252 252\n",
+            "124 124\n"
           ]
         }
       ]
@@ -424,54 +427,38 @@
         "    self.combined_fc2 = nn.Linear(256, 128)\n",
         "    self.output_fc = nn.Linear(128, n_out)\n",
         "\n",
+        "  def lstm_encoder(self, lstm_inp):\n",
+        "    batch_size = lstm_inp.size(0)\n",
+        "    hidden = self.init_hidden(batch_size)\n",
+        "    lstm_inp = lstm_inp.long()\n",
+        "    embeds = self.emb(lstm_inp)\n",
+        "    lstm_out, hidden = self.lstm(embeds, hidden)\n",
+        "    lstm_out = self.dropout(lstm_out[:, -1])\n",
+        "    lstm_out = F.relu(self.lstm_fc(lstm_out))\n",
+        "    return lstm_out\n",
+        "\n",
+        "  def cnn_encoder(self, cnn_inp):\n",
+        "    x = F.relu(self.conv1(cnn_inp))\n",
+        "    x = self.max_pool1(x)\n",
+        "    x = F.relu(self.conv2(x))\n",
+        "    x = self.max_pool2(x)\n",
+        "    x = F.relu(self.conv3(x))\n",
+        "    x = self.max_pool3(x)\n",
+        "    x = F.relu(self.conv4(x))\n",
+        "    x = self.max_pool4(x)\n",
+        "    x = x.view(-1, 5 * 2 * 128)\n",
+        "    x = self.cnn_dropout(x)\n",
+        "    cnn_out = F.relu(self.cnn_fc(x))\n",
+        "    return cnn_out\n",
+        "\n",
         "  def forward(self, lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2):\n",
-        "      # LSTM Forward\n",
-        "      batch_size = lstm_inp1.size(0)\n",
-        "      hidden = self.init_hidden(batch_size)\n",
-        "\n",
-        "      lstm_inp1 = lstm_inp1.long()\n",
-        "      lstm_inp2 = lstm_inp2.long()\n",
-        "      embeds1 = self.emb(lstm_inp1)\n",
-        "      embeds2 = self.emb(lstm_inp2)\n",
-        "      lstm_out1, hidden = self.lstm(embeds1, hidden)\n",
-        "      lstm_out1 = self.dropout(lstm_out1[:, -1])\n",
-        "      lstm_out1 = F.relu(self.lstm_fc(lstm_out1))\n",
-        "\n",
-        "      lstm_out2, hidden = self.lstm(embeds2, hidden)\n",
-        "      lstm_out2 = self.dropout(lstm_out2[:, -1])\n",
-        "      lstm_out2 = F.relu(self.lstm_fc(lstm_out2))\n",
-        "\n",
-        "      # CNN Forward\n",
-        "      x1 = F.relu(self.conv1(cnn_inp1))\n",
-        "      x1 = self.max_pool1(x1)\n",
-        "      x1 = F.relu(self.conv2(x1))\n",
-        "      x1 = self.max_pool2(x1)\n",
-        "      x1 = F.relu(self.conv3(x1))\n",
-        "      x1 = self.max_pool3(x1)\n",
-        "      x1 = F.relu(self.conv4(x1))\n",
-        "      x1 = self.max_pool4(x1)\n",
-        "      x1 = x1.view(-1, 5*2*128)\n",
-        "      x1 = self.cnn_dropout(x1)\n",
-        "      cnn_out1 = F.relu(self.cnn_fc(x1))\n",
-        "\n",
-        "      x2 = F.relu(self.conv1(cnn_inp2))\n",
-        "      x2 = self.max_pool1(x2)\n",
-        "      x2 = F.relu(self.conv2(x2))\n",
-        "      x2 = self.max_pool2(x2)\n",
-        "      x2 = F.relu(self.conv3(x2))\n",
-        "      x2 = self.max_pool3(x2)\n",
-        "      x2 = F.relu(self.conv4(x2))\n",
-        "      x2 = self.max_pool4(x2)\n",
-        "      x2 = x2.view(-1, 5*2*128)\n",
-        "      x2 = self.cnn_dropout(x2)\n",
-        "      cnn_out2 = F.relu(self.cnn_fc(x2))\n",
-        "\n",
-        "      combined_inp = torch.cat((cnn_out1, cnn_out2, lstm_out1, lstm_out2), 1)\n",
-        "      x_comb = F.relu(self.combined_fc1(combined_inp))\n",
-        "      x_comb = F.relu(self.combined_fc2(x_comb))\n",
-        "      out = torch.sigmoid(self.output_fc(x_comb))\n",
-        "\n",
-        "      return out\n",
+        "    cnn_out1, cnn_out2 = self.cnn_encoder(cnn_inp1), self.cnn_encoder(cnn_inp2)\n",
+        "    lstm_out1, lstm_out2 = self.lstm_encoder(lstm_inp1), self.lstm_encoder(lstm_inp2)\n",
+        "    combined_inp = torch.cat((cnn_out1, cnn_out2, lstm_out1, lstm_out2), 1)\n",
+        "    x_comb = F.relu(self.combined_fc1(combined_inp))\n",
+        "    x_comb = F.relu(self.combined_fc2(x_comb))\n",
+        "    out = torch.sigmoid(self.output_fc(x_comb))\n",
+        "    return out\n",
         "\n",
         "  def init_hidden(self, batch_size):\n",
         "    weight = next(self.parameters()).data\n",
@@ -485,47 +472,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BPz2qovGyBjY",
+        "id": "xX2rumtEQYv8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21f5abd5-3548-4d09-958e-cbae4c188d30"
+        "outputId": "b4a5046f-6181-4b70-d95a-40160deedc8b"
       },
       "source": [
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(device)\n",
+        "print(\"Currently using device: {}\\n\".format(device))\n",
         "\n",
         "model = CNN_LSTM(len(WORD_INDEX)+1, WORD2VEC_EMBEDDING_MATRIX, HIDDEN_DIM, N_LAYERS, y.shape[1])\n",
         "model.to(device)\n",
-        "print(model)\n",
+        "print(\"Model Architecture {}\\n\".format(model))\n",
         "\n",
         "lr= LEARNING_RATE\n",
-        "# criterion = nn.MultiLabelSoftMarginLoss()\n",
         "criterion = nn.BCELoss()\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=1e-5)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cuda\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xX2rumtEQYv8"
-      },
-      "source": [
-        "epochs = 10\n",
-        "clip = 5\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=1e-5)\n",
         "\n",
+        "print(\"Training Started...\")\n",
         "model.train()\n",
-        "for i in range(epochs):\n",
+        "for i in range(EPOCHS):\n",
         "  total_acc_train = 0\n",
         "  total_loss_train = 0\n",
         "    \n",
@@ -538,7 +505,7 @@
         "    output = model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
         "    loss = criterion(output.squeeze(), lstm_labels.float())\n",
         "    loss.backward()\n",
-        "    nn.utils.clip_grad_norm_(model.parameters(), clip)\n",
+        "    nn.utils.clip_grad_norm_(model.parameters(), CLIP)\n",
         "    optimizer.step()\n",
         "    \n",
         "    with torch.no_grad():\n",
@@ -571,8 +538,48 @@
         "  model.train()\n",
         "  torch.cuda.empty_cache()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Currently using device: cuda\n",
+            "\n",
+            "Model Architecture CNN_LSTM(\n",
+            "  (emb): Embedding(864, 300)\n",
+            "  (lstm): LSTM(300, 128, num_layers=4, batch_first=True, dropout=0.2)\n",
+            "  (dropout): Dropout(p=0.1, inplace=False)\n",
+            "  (lstm_fc): Linear(in_features=128, out_features=128, bias=True)\n",
+            "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (max_pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (max_pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (conv3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (max_pool3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (conv4): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (max_pool4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (cnn_dropout): Dropout(p=0.1, inplace=False)\n",
+            "  (cnn_fc): Linear(in_features=1280, out_features=512, bias=True)\n",
+            "  (combined_fc1): Linear(in_features=1280, out_features=256, bias=True)\n",
+            "  (combined_fc2): Linear(in_features=256, out_features=128, bias=True)\n",
+            "  (output_fc): Linear(in_features=128, out_features=2, bias=True)\n",
+            ")\n",
+            "\n",
+            "Training Started...\n",
+            "Epoch 1: train_loss: 0.6936 train_acc: 0.4998 | val_loss: 0.6932 val_acc: 0.5000\n",
+            "Epoch 2: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 3: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 4: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 5: train_loss: 0.6933 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 6: train_loss: 0.6933 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 7: train_loss: 0.6932 train_acc: 0.5000 | val_loss: 0.6931 val_acc: 0.5000\n",
+            "Epoch 8: train_loss: 0.6933 train_acc: 0.5000 | val_loss: 0.6930 val_acc: 0.5001\n",
+            "Epoch 9: train_loss: 0.6928 train_acc: 0.5003 | val_loss: 0.6929 val_acc: 0.5003\n",
+            "Epoch 10: train_loss: 0.6913 train_acc: 0.5016 | val_loss: 0.6932 val_acc: 0.5015\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -582,7 +589,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -591,7 +598,7 @@
         "id": "_JRkG-JWjfCj"
       },
       "source": [
-        "# Inference\n",
+        "# Ranker\n",
         "- For image 1 image 2 text 1 text 2 as input, we generate a score ~(0,1).\n",
         "- Search engine: only given one image and one text, compute the score for this item with all the other items in the pool. E.g, if we have num_items, the score matrix will be (num_items, ). Find predicted top 5 or top 10.\n",
         "- Haocheng's ranking evaluation: for a specific item, we know all the ground truth items that are in the same room as this specific item. \n",
@@ -607,7 +614,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     }
   ]
