single pair inference added

--- a/baselines/cnn_lstm_baseline.ipynb
+++ b/baselines/cnn_lstm_baseline.ipynb
@@ -29,14 +29,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9JvNGzXEy7H2"
+        "id": "9JvNGzXEy7H2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "761d5df8-4c2d-4622-b73f-bd23339f53f4"
       },
       "source": [
-        "# !wget -c \"https://s3.amazonaws.com/dl4j-distribution/GoogleNews-vectors-negative300.bin.gz\"\n",
-        "# !gunzip GoogleNews-vectors-negative300.bin.gz"
+        "!wget -c \"https://s3.amazonaws.com/dl4j-distribution/GoogleNews-vectors-negative300.bin.gz\"\n",
+        "!gunzip GoogleNews-vectors-negative300.bin.gz"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-10-26 17:19:48--  https://s3.amazonaws.com/dl4j-distribution/GoogleNews-vectors-negative300.bin.gz\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.204.104\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.204.104|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1647046227 (1.5G) [application/x-gzip]\n",
+            "Saving to: ‘GoogleNews-vectors-negative300.bin.gz’\n",
+            "\n",
+            "GoogleNews-vectors- 100%[===================>]   1.53G  16.3MB/s    in 99s     \n",
+            "\n",
+            "2021-10-26 17:21:28 (15.9 MB/s) - ‘GoogleNews-vectors-negative300.bin.gz’ saved [1647046227/1647046227]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -66,7 +88,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,17 +107,18 @@
         "NUM_WORDS_TOKENIZER = 50000\n",
         "EMBEDDING_DIM = 300\n",
         "BATCH_SIZE = 16\n",
-        "POSITIVE_SIZE = 3000 # We might only use a subset of the positive pairs\n",
+        "POSITIVE_SIZE = 300 # We might only use a subset of the positive pairs\n",
         "TRAIN_TEST_RATIO = 0.33\n",
         "\n",
         "# Model Hyperparameters\n",
+        "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "LEARNING_RATE = 2e-4 # 0.001\n",
         "HIDDEN_DIM = 128 # 64\n",
         "N_LAYERS = 4 # 2\n",
         "EPOCHS = 10\n",
         "CLIP = 5"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +175,7 @@
         "  del(embeddings_index)\n",
         "  return embedding_matrix"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +232,7 @@
         "    else:\n",
         "      room_to_items[room_id].append(item_id)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +263,7 @@
         "             [np.array([0, 1]) for _ in range(len(all_positive_pairs))])\n",
         "train_pairs, val_paris, y_train, y_val = train_test_split(all_pairs, y, test_size=TRAIN_TEST_RATIO, random_state=517)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +288,7 @@
         "X_train_image_premise = np.reshape(X_train_image_premise, (X_train_image_premise.shape[0], 3, 75, 115))\n",
         "X_train_image_hypothesis = np.reshape(X_train_image_hypothesis, (X_train_image_hypothesis.shape[0], 3, 75, 115))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +304,7 @@
         "X_val_image_premise = np.reshape(X_val_image_premise, (X_val_image_premise.shape[0], 3, 75, 115))\n",
         "X_val_image_hypothesis = np.reshape(X_val_image_hypothesis, (X_val_image_hypothesis.shape[0], 3, 75, 115))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lO1ZkgcUK1m7",
-        "outputId": "3c0dbdea-fd1b-40e8-ac10-fbe52f638c0e"
+        "outputId": "d087a8c0-d1df-4dc1-d28c-0a6d9ca13080"
       },
       "source": [
         "train_premise_texts = [item_to_info[id] for id in train_image_premise_id_list]\n",
@@ -309,16 +332,16 @@
         "X_train_text_hypothesis = tokenizer.texts_to_sequences(train_hypothesis_texts)\n",
         "X_train_text_hypothesis = pad_sequences(X_train_text_hypothesis, maxlen=MAX_SEQUENCE_LENGTH)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 863 unique tokens.\n",
+            "Found 288 unique tokens.\n",
             "Max len: 100\n",
             "Loaded 3000000 word vectors.\n",
-            "total embedded: 823 common words\n"
+            "total embedded: 272 common words\n"
           ]
         }
       ]
@@ -339,7 +362,7 @@
         "X_val_text_hypothesis = tokenizer.texts_to_sequences(val_hypothesis_texts)\n",
         "X_val_text_hypothesis = pad_sequences(X_val_text_hypothesis, maxlen=MAX_SEQUENCE_LENGTH)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +372,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41b862a7-8e30-48ca-9d1e-4c61ca95bf2d"
+        "outputId": "692c346f-b0ed-49ef-9e96-c984cc06f065"
       },
       "source": [
         "img_train_data = TensorDataset(torch.from_numpy(X_train_image_premise), torch.from_numpy(X_train_image_hypothesis), torch.from_numpy(y_train))\n",
@@ -367,14 +390,14 @@
         "print(len(text_train_loader), len(img_train_loader))\n",
         "print(len(text_val_loader), len(img_val_loader))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "252 252\n",
-            "124 124\n"
+            "26 26\n",
+            "13 13\n"
           ]
         }
       ]
@@ -466,7 +489,7 @@
         "                      weight.new(self.n_layers, batch_size, self.n_hidden).zero_().to(device))\n",
         "    return hidden"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,14 +499,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4a5046f-6181-4b70-d95a-40160deedc8b"
+        "outputId": "4f2ae723-db40-4879-b912-6f418ed996da"
       },
       "source": [
-        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(\"Currently using device: {}\\n\".format(device))\n",
+        "print(\"Currently using device: {}\\n\".format(DEVICE))\n",
         "\n",
         "model = CNN_LSTM(len(WORD_INDEX)+1, WORD2VEC_EMBEDDING_MATRIX, HIDDEN_DIM, N_LAYERS, y.shape[1])\n",
-        "model.to(device)\n",
+        "model.to(DEVICE)\n",
         "print(\"Model Architecture {}\\n\".format(model))\n",
         "\n",
         "lr= LEARNING_RATE\n",
@@ -499,8 +521,8 @@
         "  for lstm, cnn in zip(text_train_loader, img_train_loader):\n",
         "    lstm_inp1, lstm_inp2, lstm_labels = lstm\n",
         "    cnn_inp1, cnn_inp2, cnn_labels = cnn\n",
-        "    lstm_inp1, lstm_inp2, lstm_labels = lstm_inp1.to(device), lstm_inp2.to(device), lstm_labels.to(device)\n",
-        "    cnn_inp1, cnn_inp2, cnn_labels = cnn_inp1.to(device), cnn_inp2.to(device), cnn_labels.to(device)\n",
+        "    lstm_inp1, lstm_inp2, lstm_labels = lstm_inp1.to(DEVICE), lstm_inp2.to(DEVICE), lstm_labels.to(DEVICE)\n",
+        "    cnn_inp1, cnn_inp2, cnn_labels = cnn_inp1.to(DEVICE), cnn_inp2.to(DEVICE), cnn_labels.to(DEVICE)\n",
         "    model.zero_grad()\n",
         "    output = model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
         "    loss = criterion(output.squeeze(), lstm_labels.float())\n",
@@ -523,8 +545,8 @@
         "    for lstm, cnn in zip(text_val_loader, img_val_loader):\n",
         "      lstm_inp1, lstm_inp2, lstm_labels = lstm\n",
         "      cnn_inp1, cnn_inp2, cnn_labels = cnn\n",
-        "      lstm_inp1, lstm_inp2, lstm_labels = lstm_inp1.to(device), lstm_inp2.to(device), lstm_labels.to(device)\n",
-        "      cnn_inp1, cnn_inp2, cnn_labels = cnn_inp1.to(device), cnn_inp2.to(device), cnn_labels.to(device)\n",
+        "      lstm_inp1, lstm_inp2, lstm_labels = lstm_inp1.to(DEVICE), lstm_inp2.to(DEVICE), lstm_labels.to(DEVICE)\n",
+        "      cnn_inp1, cnn_inp2, cnn_labels = cnn_inp1.to(DEVICE), cnn_inp2.to(DEVICE), cnn_labels.to(DEVICE)\n",
         "      model.zero_grad()\n",
         "      output = model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
         "      val_loss = criterion(output.squeeze(), lstm_labels.float())\n",
@@ -538,7 +560,7 @@
         "  model.train()\n",
         "  torch.cuda.empty_cache()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +569,7 @@
             "Currently using device: cuda\n",
             "\n",
             "Model Architecture CNN_LSTM(\n",
-            "  (emb): Embedding(864, 300)\n",
+            "  (emb): Embedding(289, 300)\n",
             "  (lstm): LSTM(300, 128, num_layers=4, batch_first=True, dropout=0.2)\n",
             "  (dropout): Dropout(p=0.1, inplace=False)\n",
             "  (lstm_fc): Linear(in_features=128, out_features=128, bias=True)\n",
@@ -567,30 +589,19 @@
             ")\n",
             "\n",
             "Training Started...\n",
-            "Epoch 1: train_loss: 0.6936 train_acc: 0.4998 | val_loss: 0.6932 val_acc: 0.5000\n",
-            "Epoch 2: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 3: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 4: train_loss: 0.6934 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 5: train_loss: 0.6933 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 6: train_loss: 0.6933 train_acc: 0.4999 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 7: train_loss: 0.6932 train_acc: 0.5000 | val_loss: 0.6931 val_acc: 0.5000\n",
-            "Epoch 8: train_loss: 0.6933 train_acc: 0.5000 | val_loss: 0.6930 val_acc: 0.5001\n",
-            "Epoch 9: train_loss: 0.6928 train_acc: 0.5003 | val_loss: 0.6929 val_acc: 0.5003\n",
-            "Epoch 10: train_loss: 0.6913 train_acc: 0.5016 | val_loss: 0.6932 val_acc: 0.5015\n"
+            "Epoch 1: train_loss: 0.6942 train_acc: 0.4997 | val_loss: 0.6933 val_acc: 0.5001\n",
+            "Epoch 2: train_loss: 0.6937 train_acc: 0.4999 | val_loss: 0.6932 val_acc: 0.5001\n",
+            "Epoch 3: train_loss: 0.6934 train_acc: 0.5000 | val_loss: 0.6930 val_acc: 0.5001\n",
+            "Epoch 4: train_loss: 0.6925 train_acc: 0.5004 | val_loss: 0.6925 val_acc: 0.5004\n",
+            "Epoch 5: train_loss: 0.6873 train_acc: 0.5033 | val_loss: 0.6915 val_acc: 0.5024\n",
+            "Epoch 6: train_loss: 0.6762 train_acc: 0.5137 | val_loss: 0.6933 val_acc: 0.5086\n",
+            "Epoch 7: train_loss: 0.6599 train_acc: 0.5304 | val_loss: 0.7107 val_acc: 0.5150\n",
+            "Epoch 8: train_loss: 0.6418 train_acc: 0.5427 | val_loss: 0.7050 val_acc: 0.5242\n",
+            "Epoch 9: train_loss: 0.6336 train_acc: 0.5507 | val_loss: 0.6994 val_acc: 0.5265\n",
+            "Epoch 10: train_loss: 0.6182 train_acc: 0.5720 | val_loss: 0.6672 val_acc: 0.5412\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-TEh8Rj8ScoF"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 13,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -609,12 +620,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rvOlqTLXknYN"
+        "id": "rvOlqTLXknYN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6f1b84a-6676-45a4-9669-18c4ad891239"
+      },
+      "source": [
+        "def single_pair_inference(premise_image_path, hypothesis_image_path, premise_text, hypothesis_text, model, tokenizer):\n",
+        "  image_premise, image_hypothesis = preprocess_img(premise_image_path), preprocess_img(hypothesis_image_path)\n",
+        "  image_premise = np.reshape(image_premise, (1, 3, 75, 115))\n",
+        "  image_hypothesis = np.reshape(image_hypothesis, (1, 3, 75, 115))\n",
+        "  premise_sequence = tokenizer.texts_to_sequences([premise_text])\n",
+        "  premise_sequence = pad_sequences(premise_sequence, maxlen=MAX_SEQUENCE_LENGTH)\n",
+        "  hypothesis_sequence = tokenizer.texts_to_sequences([hypothesis_text])\n",
+        "  hypothesis_sequence = pad_sequences(hypothesis_sequence, maxlen=MAX_SEQUENCE_LENGTH)\n",
+        "\n",
+        "  img_data = TensorDataset(torch.from_numpy(image_premise), torch.from_numpy(image_hypothesis))\n",
+        "  text_data = TensorDataset(torch.from_numpy(premise_sequence), torch.from_numpy(hypothesis_sequence))\n",
+        "  \n",
+        "  text_loader = DataLoader(text_data, batch_size=1)\n",
+        "  img_loader = DataLoader(img_data, batch_size=1)\n",
+        "\n",
+        "  for lstm, cnn in zip(text_loader, img_loader):\n",
+        "    lstm_inp1, lstm_inp2 = lstm\n",
+        "    cnn_inp1, cnn_inp2 = cnn\n",
+        "    lstm_inp1, lstm_inp2 = lstm_inp1.to(DEVICE), lstm_inp2.to(DEVICE)\n",
+        "    cnn_inp1, cnn_inp2 = cnn_inp1.to(DEVICE), cnn_inp2.to(DEVICE)\n",
+        "    model.zero_grad()\n",
+        "    output = model(lstm_inp1, lstm_inp2, cnn_inp1, cnn_inp2)\n",
+        "    print(output.squeeze())\n",
+        "  \n",
+        "\n",
+        "\n",
+        "image_id_1 = train_image_premise_id_list[0]\n",
+        "image_id_2 = train_image_hypothesis_id_list[0]\n",
+        "text_1 = train_premise_texts[0]\n",
+        "text_2 = train_hypothesis_texts[0]\n",
+        "single_pair_inference(premise_image_path=IMAGES_DIR + image_id_1 + \".jpg\",\n",
+        "          hypothesis_image_path=IMAGES_DIR + image_id_2 + \".jpg\",\n",
+        "          premise_text=text_1,\n",
+        "          hypothesis_text=text_2,\n",
+        "          model=model,\n",
+        "          tokenizer=tokenizer)\n"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.5772, 0.4274], device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d0qmvz0xpmci",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7357c58-972c-4207-8ec8-b26d7d3b30bc"
+      },
+      "source": [
+        "len(all_pairs)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "600"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ck31vLsy5Mth"
       },
       "source": [
         ""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     }
   ]
